增加技能树版本
1. AkiLabel现在可以装饰字段
2. 增加了AkiST，你可以用它制作技能了
3. 增加了BehaviorTreeSO中行为树的直接修改功能

--- a/AkiBT/Editor/Kurisu.AkiBT.Editor.asmdef
+++ b/AkiBT/Editor/Kurisu.AkiBT.Editor.asmdef
@@ -1,8 +1,12 @@
 {
-    "name": "Kurisu.BehaviorTree",
+    "name": "Kurisu.AkiBT.Editor",
     "rootNamespace": "",
-    "references": [],
-    "includePlatforms": [],
+    "references": [
+        "Kurisu.AkiBT"
+    ],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
