优化共享变量
共享变量修改为下拉选项模式
增加了ProjectSetting筛选Group类型
修复了ChangeBehavior的位置问题

--- a/AkiBT/Runtime/Kurisu.AkiBT.asmdef
+++ b/AkiBT/Runtime/Kurisu.AkiBT.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "Kurisu.AkiBT",
-    "rootNamespace": "",
+    "rootNamespace": "Kurisu.AkiBT",
     "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
