--- a/AkiBT/package.json
+++ b/AkiBT/package.json
@@ -13,6 +13,6 @@
   "category": "Visual Scripting",
   "repository": {
     "type": "git",
-    "url": "https://github.com/AkiKurisu/AkiBT.git"
+    "url": "https://github.com/AkiKurisu/AkiBT.git?path=/AkiBT"
   }
 }
