--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "com.kurisu.akibt",
   "displayName": "AkiBT",
-  "version": "1.2.7",
+  "version": "1.3.0",
   "unity": "2021.3",
-  "description": "可视化行为树编辑器Node based Behavior Tree.\n*支持运行时可视化结点状态Supports visualizing active node in runtime.\n*非常便于拓展和自定义新的行为Easily add original behaviors.",
+  "description": "\u53ef\u89c6\u5316\u884c\u4e3a\u6811\u7f16\u8f91\u5668Node based Behavior Tree.\n*\u652f\u6301\u8fd0\u884c\u65f6\u53ef\u89c6\u5316\u7ed3\u70b9\u72b6\u6001Supports visualizing active node in runtime.\n*\u975e\u5e38\u4fbf\u4e8e\u62d3\u5c55\u548c\u81ea\u5b9a\u4e49\u65b0\u7684\u884c\u4e3aEasily add original behaviors.",
   "keywords": [
     "Graph",
     "GraphView",
@@ -14,5 +14,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/AkiKurisu/AkiBT.git"
+  },
+  "dependencies": {
+    "com.unity.nuget.newtonsoft-json": "3.2.1"
   }
 }
