--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "com.kurisu.akibt",
   "displayName": "AkiBT",
-  "version": "1.5.0",
+  "version": "1.5.1",
   "unity": "2021.3",
-  "description": "Node based Behavior Tree Editor.\nSupports visualizing active node in runtime.\nEasily add original behaviors.",
+  "description": "Powerful node based behavior tree editor for Unity.",
   "keywords": [
     "Graph",
     "GraphView",
